--- a/client/src/components/modals/BaseModal.scss
+++ b/client/src/components/modals/BaseModal.scss
@@ -20,6 +20,7 @@
     align-items: center;
     justify-content: center;
     max-width: 90%;
+    width: 500px;
     margin: auto;
     z-index: 1;
     padding: 12px;
