Logout button added in navbar

--- a/client/src/components/MarketItem.scss
+++ b/client/src/components/MarketItem.scss
@@ -124,7 +124,7 @@
 
       strong {
         color: #000;
-        background: #d4d4d4;
+        background: #efefef;
         display: inline-block;
         border-radius: 10px;
         margin-right: 10px;
