--- a/client/src/components/modals/ViewItemModal.scss
+++ b/client/src/components/modals/ViewItemModal.scss
@@ -1,7 +1,7 @@
 .item_viewer {
   strong {
     color: #000;
-    background: #d4d4d4;
+    background: #efefef;
     display: inline-block;
     border-radius: 10px;
     margin-right: 10px;
